Updated rules page

--- a/rules.html
+++ b/rules.html
@@ -26,7 +26,7 @@
             <li><a class="nav-link" href="https://www.erebus.systems/CompSoc_CTF/">Home</a></li>
             <li><a class="nav-link" href="https://www.erebus.systems/CompSoc_CTF/rules.html">Rules</a></li>
             	<li><a class="nav-link" href="https://www.erebus.systems/CompSoc_CTF/leaderboard.php">Leaderboard</a></li>
-            	<li> <a class="nav-link" href="https://www.erebus.systems/CompSoc_CTF/login.php">Login</a>
+            	<li> <a class="nav-link" href="https://www.erebus.systems/CompSoc_CTF/sign_up.php">Login</a>
         </ul>
       </div>
     </div>
@@ -36,8 +36,15 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-12 text-center">
-        <h1 class="mt-5">Welcome to the CompSoc Capture The Flag Competition!</h1>
-        <p class="lead">Thank you for coming and performing in our first Capture The Flag event! We are really proud of this project and we hope that everyone has a good time. As we wait for people to arrive please talk amongst yourselves, if you don't know your team mates exchange names and come up with a good team name! Read the rules before you sign up. Good luck, have fun.</p>
+        <h1 class="mt-5">Rules</h1>
+        <p class="lead">On this page we will just go over a few rules, once read you can sign up to the leaderboard system and then go ahead with the challenges.</p>
+        <ul class="list-group-flush">
+          <li class="list-group-item">Do not attempt to hack or attack the domain/server that this website is on. This is just a helpful little thing I cooked up to make things easier for you.</li>
+          <li class="list-group-item">You can use any online resource you think could be helpful for this competition as long as other participants would have equal access. (So no paid services, books or otherwise paywell blocked content)</li>
+         <li class="list-group-item">You will have a max of 4 hours to complete as many tasks as possible </li>
+          <li class="list-group-item">Teams have a max number of 3, however you can compete with less. </li>
+          <li class="list-group-item"> When signing up do not use any passwords you use for other platforms. This is a quick and dirty web app.</li>
+        </ul>
       </div>
     </div>
   </div>
